configuration linkerd and memory for 8GB server